# coins_wallet_service

./: .dockerignore  .isort.cfg  .travis.yml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  tox.ini
coins_wallet_service/: base_settings.py  dev_settings.py  settings.py  test_settings.py  urls.py  wsgi.py
docker/: entrypoint.sh
docker/etc/nginx/conf.d/: cws.conf
docker/usr/src/coins_wallet_service/coins_wallet_service/: prod_settings.py
docs/: api.md
payment/: models.py  serializers.py  urls.py  views.py
payment/migrations/: 0001_initial.py
payment/tests/: conftest.py  test_account.py  test_payment.py  utils.py
wallet/: models.py  urls.py  views.py
wallet/migrations/: 0001_initial.py
wallet/tests/: conftest.py  test_account.py  test_payment.py  utils.py
