[tool.poetry]
name = "coins_wallet_service"
version = "0.1.0"
description = ""
authors = ["Bulat Khasanov <afti@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
django-extensions = "^2.1"
djangorestframework = "^3.9"
psycopg2-binary = "^2.8"

[tool.poetry.dev-dependencies]
pyhamcrest = "^1.9"
pytest = "^5.0"
pytest-django = "^3.5"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
django_debug_toolbar = "^2.0"
ipython = "^7.6"
isort = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
